added database and getuserbyid endpoint
